# FLO

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLO_Manifesto.md  README.md  ROADMAP_CLI_BUGS.md  Roadmap_v0_1_to_v0_3.md  SECURITY.md  out.dot  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  sppm_specification.md  unfucksppm.md  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml  import-lint.yml  publish.yml
.roadmap/: .init_manifest.json  config.yaml
.roadmap/db/: state.db
.roadmap/issues/backlog/: 77ebdb56-define-sppm-footer-metrics-catalog-and-computation-policy.md
.roadmap/issues/codebase-cleanup/: 47ad9c62-move-subprocess-detail-map-handling-to-a-shared-domain-seam.md  500b4414-split-the-sppm-dot-renderer-into-focused-modules.md  5fbc5f50-reduce-dict-marshalling-between-canonical-ir-and-sppm-rendering.md  63da7b5d-consolidate-render-option-schema-and-cli-plumbing.md  7305f218-extract-a-framework-agnostic-cli-parse-and-dispatch-contract.md  e3ef5d4f-decouple-ir-validation-from-export-schema-projection.md  f620fe69-introduce-shared-typed-metadata-contracts-for-renderer-facing-fields.md  f64f1444-refactor-adapter-normalization-and-ir-assembly-out-of-compilepy.md
.roadmap/issues/render-intent-schema-and-multi-view-support/: 3c7a2e1f-consolidate-schema-files.md  (+9 more)
.roadmap/milestones/: codebase-cleanup.md  render-intent-schema-and-multi-view-support.md  renderer-platform-completeness.md  spaghetti-map-enhancement-plan.md  sppm-semantic-completeness.md  v0-1-core-completion.md  v0-2-static-analytics.md  v0-3-telemetry-alignment.md
.roadmap/projects/: e7961ee8-flo-roadmap.md
docs/: CHANGELOG.md  CLI_Error_Contract.md  README.md  User_Manual.md
docs/design/: FLO_IR.md  IR.md  Layout_Core_5_Phase_Execution_Plan.md  README.md  Roadmap_v0_1_to_v0_3.md  SPPM_Layout_Enhancement_Spec.md  SPPM_Root_Cause_Debugging_Workflow.md  SSOT_Hierarchy.md  adr_render_stack_elk_svg_typst.md  artifact_taxonomy.md  flowchart_renderer_design.md  language_primitive_taxonomy.md  layout_canvas_boundary_contract.md  ontology.md  publication_model.md  render_intent_schema.md  render_platform_migration_plan.md  render_platform_target_architecture.md  renderer_architecture_boundaries.md  spaghetti_renderer_design.md  sppm_layout_enhancement_design.md  sppm_renderer_design.md  swimlane_renderer_design.md  typed_metadata.md  v0_1_architecture_note.md  wait-time-vs-changeover-time-semantics.md
docs/policy/: README.md  artifact_scope.md  authoritative_artifacts.md  language_primitive_migration_contract.md  sppm_regression_gates.md
docs/specs/: README.md  cli_error_contract.md  core_language.md  flowchart.md  process_map.md  render_capabilities.md  spaghetti_map.md  sppm.md  swimlane.md  value_stream_map.md
examples/: README.md  linear.flo  simple.flo
examples/conformance/: README.md  sppm_corpus.json
examples/reference/: bakery_setup_vs_queue.flo  chocolate_chip_cookies.flo  new_semantics.flo  rework_loop.flo  semantic_controls_showcase.flo  simple.flo  sppm_attachment_minimal_repro.flo  sppm_feature_showcase.flo  sppm_feature_showcase_wrapped.flo  sppm_long_label_stress.flo  swimlane.flo  washnfold.flo
flo/: __init__.py  cli.py  logging.py  model.py  parser.py
notes/: future_features.md  language_primitive_taxonomy_implementation_plan.md  review_gate_findings_2026-07-01.md  today_battle_plan.md
reference-implementation/python/: README.md  pyproject.toml
reference-implementation/python/src/flo/: __init__.py
reference-implementation/python/src/flo/ir/: enums.py  models.py  validate.py
reference-implementation/python/src/flo_reference/: __init__.py
reference-implementation/python/src/flo_reference/ir/: enums.py  models.py  validate.py
schema/: flo_ir.json  flo_types.json
scripts/: build_all.py  build_reference_artifacts.sh  build_sppm_baseline_artifacts.py  check_complexity.py  check_docs_governance.py  check_file_length.py  check_imports.py  check_sppm_baseline_drift.py  compare_sppm_profiles.py  projLOC.sh  report_sppm_refactor_baseline.py  run_sppm_strategy_matrix.py  validate_ir_schema.py  verify_sppm_sizing.py
src/flo/: __init__.py  cli.py  cli_args.py  core.py  errors.py  io.py  main.py  pipeline.py
tests/: __init__.py  conftest.py  test_parser.py
tests/compiler/: __init__.py  test_queue_wait_time_validation.py
tests/fixtures/: __init__.py  sample_fixtures.py
tests/integration/: test_cli_examples.py  test_cli_export_flag.py  test_cli_placeholder.py  test_cli_posix_streams.py  test_cli_render_options.py  test_cli_sppm_continuations.py  test_cli_sppm_projection_options.py  test_cli_sppm_step_refs.py  test_cli_svg_render_options.py  test_cli_writes_dot.py  test_pipeline_integration.py
tests/policy/: layer_rules.py  test_export_contract_boundaries.py  test_importlinter_contracts.py  test_renderer_architecture_boundaries.py  test_src_flo_dirs.py  test_top_level_dirs.py
tests/unit/: test_adapters_model_fallback.py  test_adapters_models.py  test_adapters_pydantic.py  test_cli_args.py  test_cli_console_main.py  test_cli_contract.py  test_cli_error_observability.py  test_cli_execute.py  test_compiler_and_render.py  test_conformance_examples.py  test_core.py  test_cover_fill.py  test_error_output_streams.py  test_exception_mapping.py  test_export_registry.py  test_flo_config.py  test_io.py  test_ir_enums.py  test_ir_models_serialization.py  test_json_export_branches.py  test_layout_core_corridors.py  test_layout_core_elk.py  test_layout_core_elk_requests.py  test_layout_core_elk_runtime.py  test_layout_core_elk_runtime_errors.py  test_layout_core_elk_support_low_coverage.py  test_layout_core_placement.py  test_layout_core_ports.py  test_layout_core_results.py  test_layout_core_routing.py  test_logging_branches.py  test_logging_configure.py  test_main.py  test_main_extra.py  test_option_and_capability_validation_svg_only.py  test_parametrized_core.py  test_pipeline_branches.py  test_pipeline_readstep.py  test_pipeline_runner.py  test_pipeline_step_telemetry.py  (+48 more)
(+275 files in other folders)
