[project]
name = "flo"
version = "0.0.0"
description = "FLO reference implementation"
readme = "README.md"
requires-python = ">=3.14"
# Runtime dependencies
dependencies = [
    "structlog>=22.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
flo = "flo.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "vulture>=2.14",
    "radon>=5.1.0",
    "pytest",
    "pytest-cov>=4.0",
    "import-linter>=2.10",
]

[tool.importlinter]
# Import-linter rules for enforcing layer boundaries in the FLO project.
# Note: import-linter expects a specific schema; this section encodes the
# intended rules in pyproject.toml so CI and tooling can be wired to the
# enforcement tool. Adjust keys below to match the import-linter version used.

# The top-level package that import-linter should treat as the project's
# root importable package. This must match the importable package name
# (e.g. the `flo` package under `src/flo`).
root_package = "flo"

[tool.importlinter.layers]
# Logical layer -> package prefix
# Keep layer names small and map to specific package prefixes.
core = "flo.core"
adapters = "flo.adapters"
compiler = "flo.compiler"
render = "flo.render"
services = "flo.services"

[[tool.importlinter.rules]]
name = "no_core_deps"
description = "Core/CLI must not be imported by domain layers."
modules = ["flo.core", "flo.main"]
forbidden = ["flo.compiler", "flo.adapters", "flo.render", "flo.services"]

[[tool.importlinter.rules]]
name = "no_compiler_to_core_logging"
description = "Compiler and adapters must not import core or logging setup."
modules = ["flo.compiler", "flo.adapters"]
forbidden = ["flo.core", "flo.services.logging"]

[[tool.importlinter.rules]]
name = "compiler_ir_independent"
description = "Compiler IR package must be independent of higher-level concerns."
modules = ["flo.compiler.ir"]
forbidden = ["flo.core", "flo.main", "flo.adapters", "flo.render", "flo.services"]

[[tool.importlinter.rules]]
name = "render_optional"
description = "Renderers should only depend on compiler layers and services, not on core internals."
modules = ["flo.render"]
forbidden = ["flo.core", "flo.services.logging"]

[[tool.importlinter.rules]]
name = "no_domain_import_core"
description = "Domain layers must not import core entrypoint modules."
modules = ["flo.adapters", "flo.compiler", "flo.render", "flo.services"]
forbidden = ["flo.core", "flo.main"]
