[project]
name = "flo-lang"
version = "0.1.4"
description = "FLO reference implementation"
readme = "README.md"
requires-python = ">=3.14"
# Runtime dependencies
dependencies = [
    "structlog>=22.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "flo"
module-root = "src"

[project.scripts]
flo = "flo.core.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "vulture>=2.14",
    "radon>=5.1.0",
    "pytest",
    "pytest-cov>=4.0",
    "import-linter>=2.10",
]

[tool.importlinter]
# Import-linter rules for enforcing layer boundaries in FLO.
root_package = "flo"

[[tool.importlinter.contracts]]
name = "Domain layers do not import core"
type = "forbidden"
source_modules = ["flo.adapters", "flo.compiler", "flo.render", "flo.services"]
forbidden_modules = ["flo.core"]

[[tool.importlinter.contracts]]
name = "Compiler and adapters avoid logging internals"
type = "forbidden"
source_modules = ["flo.compiler", "flo.adapters"]
forbidden_modules = ["flo.services.logging"]

[[tool.importlinter.contracts]]
name = "Compiler IR is independent of higher-level packages"
type = "forbidden"
source_modules = ["flo.compiler.ir"]
forbidden_modules = ["flo.core", "flo.adapters", "flo.render", "flo.services"]

[[tool.importlinter.contracts]]
name = "Render package does not import core"
type = "forbidden"
source_modules = ["flo.render"]
forbidden_modules = ["flo.core"]

[tool.coverage.report]
omit = [
    "src/flo/main.py",
    "src/flo/core/_sppm_refactor_baseline.py",
]
