
[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "flo-reference"
version = "0.1.0"
description = "Reference implementation for FLO (minimal)"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "FLO" } ]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pydantic>=1.10",
	"typer>=0.9",
	"ruamel.yaml>=0.17",
	"ruff",
	"black"
]

